<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="delete">←</string>
    <string name="clear">ac</string>
    <string name="percent">%</string>
    <string name="divide">\u00F7</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multiple">x</string>
    <string name="equal">=</string>
    <string name="plusMinus">-/+</string>
    <string name="defaultTextvalue">0</string>
    <string name="option">SCI</string>
    <string name="cal">cal</string>
    <string name="test">test</string>
    <string name="second">2nd</string>
    <string name="deg">deg</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="xToPowerOf">X\u00B2</string>
    <string name="lg">lg</string>
    <string name="ln">ln</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>
    <string name="sqx">\u221a</string>
    <string name="x">x!</string>
    <string name="oneX">1/x</string>
    <string name="pie">\u03C0</string>
    <string name="e">e</string>
</resources>
